hphp/test/slow/sealed/sealed_classes1.php.expectf
Fatal error: Classes cannot be both final and sealed. in %s/sealed_classes1.php on line 3
